# logc

./: CMakeLists.txt  README.md
src/: log.c  log.h
